--- a/public/docs.html
+++ b/public/docs.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rest Api - Zexxabot</title>
+    <title>Rest Api - CiyoBot</title>
     <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="vendors/flag-icon-css/css/flag-icon.min.css">
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7Wk6KnE7aJHUHjpp_wBoDfkeSIOQfSGMmxg&usqp=CAU"><link rel="stylesheet" href="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7Wk6KnE7aJHUHjpp_wBoDfkeSIOQfSGMmxg&usqp=CAU"><link rel="stylesheet" href="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <script src="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.js"></script>
-   <meta name="description" content="Zexxabot - API">
+   <meta name="description" content="CiyoBot - API">
    <meta property="og:image" content="https://w0.peakpx.com/wallpaper/581/70/HD-wallpaper-light-yagami-shinigami-death-note-kira.jpg">
    <meta property="og:site_name" content="EKA PI">
    <meta name="keywords" content="REST API">
-   <meta name="author" content="Alpha Gans">
+   <meta name="author" content="RhmttDev">
   </head>
   <body>
   <body id="page-top" onload="getvisitor();">
@@ -41,8 +41,8 @@
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal">Zexxa Dev</h5>
-                  <span>Puh sepuhhh ajarin dong puhhh</span>
+                  <h5 class="mb-0 font-weight-normal">RhmttDev</h5>
+                  <span>Developer</span>
                 </div>
               </div>
             </div>
@@ -399,7 +399,7 @@
           <span class="nav-link">Contact Me</span>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://github.com/Kira-Master">
+            <a class="nav-link" href="https://github.com/RhmttCore">
               <span class="menu-icon">
                 <i class="mdi mdi-github-circle"></i>
               </span>
@@ -407,27 +407,11 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://wa.me/6282135278036">
+            <a class="nav-link" href="https://wa.me/6285254337661">
               <span class="menu-icon">
                 <i class="mdi mdi-whatsapp"></i>
               </span>
               <span class="menu-title">WhatsApp</span>
-            </a>
-          </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="https://facebook.com/fauzixliljee">
-              <span class="menu-icon">
-                <i class="mdi mdi-facebook"></i>
-              </span>
-              <span class="menu-title">Facebook</span>
-            </a>
-          </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="https://instagram.com/paujikerenbanget">
-              <span class="menu-icon">
-                <i class="mdi mdi-instagram"></i>
-              </span>
-              <span class="menu-title">Instagram</span>
             </a>
           </li>
         </ul>
