--- a/public/docs.html
+++ b/public/docs.html
@@ -1,6 +1,6 @@
-<!-- <script>
+ <script>
       swal({
-        title: 'Welcome To Rest Api ciyobot',
+        title: 'Welcome To Ciyo Rest Api',
         text: 'Klo ada error langsung lapor owner',
         imageUrl: 'https://media.tenor.com/KY_iCm1JYzsAAAAC/kira-death-note.gif',
         imageWidth: 400,
@@ -11,7 +11,7 @@
     </script> 
 			<script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>   -->
+</script>   
     <script src="vendors/js/vendor.bundle.base.js"></script>
     <script src="vendors/owl-carousel-2/owl.carousel.min.js"></script>
     <script src="js/off-canvas.js"></script>
