--- a/public/docs.html
+++ b/public/docs.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="profile-name">
                   <h5 class="mb-0 font-weight-normal">RhmttDev</h5>
-                  <span>Puh sepuhhh ajarin dong puhhh</span>
+                  <span>Developer</span>
                 </div>
               </div>
             </div>
@@ -656,7 +656,7 @@
         </div>
       </div>
     </div>
-  <!--  <script>
+   <script>
       swal({
         title: 'Welcome To Ciyo Rest Api',
         text: 'Klo ada error langsung lapor owner',
@@ -669,7 +669,7 @@
     </script>
 			<script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>   -->
+</script>   
     <script src="vendors/js/vendor.bundle.base.js"></script>
     <script src="vendors/owl-carousel-2/owl.carousel.min.js"></script>
     <script src="js/off-canvas.js"></script>
