--- a/public/docs.html
+++ b/public/docs.html
@@ -659,7 +659,7 @@
    <script>
       swal({
         title: 'Welcome To Ciyo Rest Api',
-        text: 'Klo ada error langsung lapor owner',
+        text: 'Jika ada error silahkan hubungi developer',
         imageUrl: 'https://media.tenor.com/KY_iCm1JYzsAAAAC/kira-death-note.gif',
         imageWidth: 400,
         imageHeight: 200,
