--- a/public/docs.html
+++ b/public/docs.html
@@ -399,7 +399,7 @@
           <span class="nav-link">Contact Me</span>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://github.com/Kira-Master">
+            <a class="nav-link" href="https://github.com/RhmttCorer">
               <span class="menu-icon">
                 <i class="mdi mdi-github-circle"></i>
               </span>
@@ -407,27 +407,11 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="https://wa.me/6282135278036">
+            <a class="nav-link" href="https://wa.me/6285254337661">
               <span class="menu-icon">
                 <i class="mdi mdi-whatsapp"></i>
               </span>
               <span class="menu-title">WhatsApp</span>
-            </a>
-          </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="https://facebook.com/fauzixliljee">
-              <span class="menu-icon">
-                <i class="mdi mdi-facebook"></i>
-              </span>
-              <span class="menu-title">Facebook</span>
-            </a>
-          </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="https://instagram.com/paujikerenbanget">
-              <span class="menu-icon">
-                <i class="mdi mdi-instagram"></i>
-              </span>
-              <span class="menu-title">Instagram</span>
             </a>
           </li>
         </ul>
